<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/nav_notLogged"
        android:icon="@drawable/outline_check_24"
        android:title="@string/not_logged_today" />

    <item
        android:id="@+id/nav_logged"
        android:icon="@drawable/baseline_close_24"
        android:title="@string/logged_today" />

    <item
        android:id="@+id/nav_skipped"
        android:icon="@drawable/skipped"
        android:title="@string/skipped_today" />

    <item
        android:id="@+id/nav_followed_challenges"
        android:icon="@drawable/outline_check_24"
        android:title="@string/followed_challenges" />

    <item
        android:id="@+id/nav_unfollowed_challenges"
        android:icon="@drawable/baseline_close_24"
        android:title="@string/not_followed_challenges" />

    <item
        android:id="@+id/nav_streaks"
        android:icon="@drawable/streak"
        android:title="@string/streaks" />

    <item
        android:id="@+id/nav_completed"
        android:icon="@drawable/completed"
        android:title="@string/completed" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help" />

</menu>